--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,8 @@
 
 export(get_nomads_filelist)
 export(get_upstream)
-export(launch_application)
 export(prep_nhd)
+export(run_app)
 export(subset_nomads_rda)
 import(shiny)
 importFrom(DT,dataTableAjax)
