--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(get_upstream)
 export(prep_nhd)
 export(run_app)
 export(subset_nomads_rda)
+export(subset_nomads_rda_drop)
 import(shiny)
 importFrom(DT,dataTableAjax)
 importFrom(DT,datatable)
@@ -15,4 +16,9 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(fst,read_fst)
+importFrom(fst,write_fst)
+importFrom(ncdf4,nc_open)
+importFrom(rdrop2,drop_download)
+importFrom(rdrop2,drop_read_csv)
+importFrom(rdrop2,drop_upload)
 importFrom(shinyjs,click)
