--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,9 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(fst,read_fst)
 importFrom(fst,write_fst)
+importFrom(ncdf4,nc_close)
 importFrom(ncdf4,nc_open)
+importFrom(ncdf4,ncvar_get)
 importFrom(rdrop2,drop_download)
 importFrom(rdrop2,drop_read_csv)
 importFrom(rdrop2,drop_upload)
