--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,9 @@ export(get_upstream)
 export(prep_nhd)
 export(run_app)
 export(subset_nomads_rda_drop)
+import(HydroData)
+import(ggplot2)
 import(shiny)
-importFrom(DT,dataTableAjax)
-importFrom(DT,datatable)
-importFrom(DT,renderDataTable)
 importFrom(dismo,geocode)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
@@ -17,10 +16,15 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(fst,read_fst)
 importFrom(fst,write_fst)
+importFrom(lubridate,ymd_hms)
 importFrom(ncdf4,nc_close)
 importFrom(ncdf4,nc_open)
 importFrom(ncdf4,ncvar_get)
 importFrom(rdrop2,drop_download)
 importFrom(rdrop2,drop_read_csv)
 importFrom(rdrop2,drop_upload)
+importFrom(reshape2,melt)
 importFrom(shinyjs,click)
+importFrom(utils,download.file)
+importFrom(utils,head)
+importFrom(utils,write.csv)
