--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,8 @@ export(update_data)
 import(HydroData)
 import(ggplot2)
 import(shiny)
-importFrom(dismo,geocode)
+importFrom(AOI,getAOI)
+importFrom(AOI,getPoint)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,rename)
