--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ r_github_packages:
   - jimhester/covr
   - mikejohnson51/HydroData
   - mikejohnson51/AOI
+  - ropensci/USAboundariesData
   
 
 after_success:
