add USAboundariesData and add bounding box fix #9

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ BugReports: https://github.com/mikejohnson51/FlowlineFinder/issues
 Depends:
     R (>= 3.0.0),
     HydroData,
-    ggplot2
+    ggplot2,
+    USAboundariesData
 Imports:
     shiny (>= 1.0.4),
     AOI,
