--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(subset_nomads_rda_drop)
 export(update_data)
 import(HydroData)
 import(ggplot2)
+import(leaflet)
+import(magrittr)
 import(shiny)
 importFrom(AOI,getAOI)
 importFrom(AOI,getPoint)
