make better use of dplyr package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,8 +15,11 @@ import(magrittr)
 import(shiny)
 importFrom(AOI,getAOI)
 importFrom(AOI,getPoint)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(fst,read_fst)
