--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,3 +36,4 @@ importFrom(shinyjs,click)
 importFrom(utils,download.file)
 importFrom(utils,head)
 importFrom(utils,write.csv)
+importFrom(xts,as.xts)
