--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(run_app)
 export(subset_nomads_rda_drop)
 export(update_data)
 import(HydroData)
+import(dygraphs)
 import(ggplot2)
 import(leaflet)
 import(magrittr)
