View on Map multiple ids

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ import(leaflet)
 import(magrittr)
 import(shiny)
 importFrom(AOI,getAOI)
+importFrom(AOI,getBoundingBox)
 importFrom(AOI,getPoint)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
