--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ export(prep_nhd)
 export(run_app)
 export(subset_nomads_rda_drop)
 export(update_data)
-import(HydroData)
 import(dygraphs)
 import(ggplot2)
 import(leaflet)
@@ -17,6 +16,9 @@ import(shiny)
 importFrom(AOI,getAOI)
 importFrom(AOI,getBoundingBox)
 importFrom(AOI,getPoint)
+importFrom(HydroData,findNHD)
+importFrom(HydroData,findNWIS)
+importFrom(HydroData,findWaterbodies)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,inner_join)
@@ -27,6 +29,7 @@ importFrom(dplyr,select)
 importFrom(fst,read_fst)
 importFrom(fst,write_fst)
 importFrom(lubridate,ymd_hms)
+importFrom(lutz,tz_lookup_coords)
 importFrom(ncdf4,nc_close)
 importFrom(ncdf4,nc_open)
 importFrom(ncdf4,ncvar_get)
