--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,8 @@ export(update_data)
 import(dygraphs)
 import(ggplot2)
 import(leaflet)
-import(magrittr)
 import(shiny)
+importFrom(AOI,aoiProj)
 importFrom(AOI,getAOI)
 importFrom(AOI,getBoundingBox)
 importFrom(AOI,getPoint)
@@ -28,17 +28,15 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(fst,read_fst)
 importFrom(fst,write_fst)
-importFrom(lubridate,ymd_hms)
 importFrom(lutz,tz_lookup_coords)
+importFrom(magrittr,"%>%")
 importFrom(ncdf4,nc_close)
 importFrom(ncdf4,nc_open)
 importFrom(ncdf4,ncvar_get)
-importFrom(rdrop2,drop_download)
-importFrom(rdrop2,drop_read_csv)
-importFrom(rdrop2,drop_upload)
 importFrom(reshape2,melt)
 importFrom(shinyjs,click)
+importFrom(sp,SpatialPoints)
+importFrom(sp,over)
 importFrom(utils,download.file)
 importFrom(utils,head)
 importFrom(utils,write.csv)
-importFrom(xts,as.xts)
