multiple comids for downloadable ggplot

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,12 +23,10 @@ Imports:
     shinyjs,
     ncdf4,
     magrittr,
-    rdrop2,
     utils,
     lutz,
-    maps,
     sp,
-    maptools,
+    lubridate,
     reshape2
 Suggests:
     covr,
