--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(fst,read_fst)
 importFrom(fst,write_fst)
+importFrom(lubridate,ymd_h)
 importFrom(lutz,tz_lookup_coords)
 importFrom(magrittr,"%>%")
 importFrom(ncdf4,nc_close)
@@ -39,4 +40,5 @@ importFrom(sp,SpatialPoints)
 importFrom(sp,over)
 importFrom(utils,download.file)
 importFrom(utils,head)
+importFrom(utils,read.csv)
 importFrom(utils,write.csv)
