download and process new data in temp dir

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(dplyr,select)
 importFrom(fst,read_fst)
 importFrom(fst,write_fst)
 importFrom(lubridate,ymd_h)
+importFrom(lubridate,ymd_hms)
 importFrom(lutz,tz_lookup_coords)
 importFrom(magrittr,"%>%")
 importFrom(ncdf4,nc_close)
