default to tz of streams and avoid checking NAs in max()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(fst,read_fst)
 importFrom(fst,write_fst)
+importFrom(lubridate,with_tz)
 importFrom(lubridate,ymd_h)
 importFrom(lubridate,ymd_hms)
 importFrom(lutz,tz_lookup_coords)
@@ -43,3 +44,4 @@ importFrom(utils,download.file)
 importFrom(utils,head)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
+importFrom(xts,xts)
