add dygraphs to high flows tab

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(get_upstream)
 export(make_flood_risk_map)
 export(prep_nhd)
 export(run_app)
-export(subset_nomads_rda_drop)
+export(subset_nomads)
 export(update_data)
 import(dygraphs)
 import(ggplot2)
@@ -19,6 +19,7 @@ importFrom(AOI,getPoint)
 importFrom(HydroData,findNHD)
 importFrom(HydroData,findNWIS)
 importFrom(HydroData,findWaterbodies)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,inner_join)
