mark plotted high flows and style dygraph

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
+importFrom(dplyr,replace)
 importFrom(dplyr,select)
 importFrom(fst,read_fst)
 importFrom(fst,write_fst)
