--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,9 @@ import(ggplot2)
 import(leaflet)
 import(shiny)
 importFrom(AOI,aoiProj)
+importFrom(AOI,geocode)
 importFrom(AOI,getAOI)
 importFrom(AOI,getBoundingBox)
-importFrom(AOI,getPoint)
 importFrom(HydroData,findNHD)
 importFrom(HydroData,findNWIS)
 importFrom(HydroData,findWaterbodies)
