--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,3 +1,4 @@
+Encoding: UTF-8
 Package: FlowFinder
 Title: Find, Vizualize and Download NWM and NHD Data in 'Shiny'
 Version: 0.1.0
@@ -34,4 +35,4 @@ Suggests:
     testthat
 License: MIT + file LICENSE
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
