--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,18 +15,26 @@ Depends:
     ggplot2,
     leaflet,
     dygraphs,
+    spdplyr,
+    shinydashboard,
+    shinyBS,
+    shinyWidgets,
     AOI
 Imports:
     shiny (>= 1.0.4),
     dplyr,
     DT,
     fst,
+    kableExtra,
+    knitr,
     shinyjs,
     ncdf4,
     magrittr,
+    tidyr,
     utils,
     lutz,
     sp,
+    purrr,
     lubridate,
     xts,
     reshape2
