--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,8 +27,12 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(fst,read_fst)
 importFrom(fst,write_fst)
+importFrom(kableExtra,footnote_marker_symbol)
+importFrom(kableExtra,kable_styling)
+importFrom(knitr,kable)
 importFrom(lubridate,with_tz)
 importFrom(lubridate,ymd_h)
 importFrom(lubridate,ymd_hms)
@@ -37,10 +41,14 @@ importFrom(magrittr,"%>%")
 importFrom(ncdf4,nc_close)
 importFrom(ncdf4,nc_open)
 importFrom(ncdf4,ncvar_get)
+importFrom(purrr,map)
+importFrom(purrr,map_chr)
+importFrom(purrr,map_lgl)
 importFrom(reshape2,melt)
 importFrom(shinyjs,click)
 importFrom(sp,SpatialPoints)
 importFrom(sp,over)
+importFrom(tidyr,spread)
 importFrom(utils,download.file)
 importFrom(utils,head)
 importFrom(utils,read.csv)
