add ability to adjust and move AOI bounding box

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ import(ggplot2)
 import(leaflet)
 import(shiny)
 importFrom(AOI,aoiProj)
+importFrom(AOI,describe)
 importFrom(AOI,geocode)
 importFrom(AOI,getAOI)
 importFrom(AOI,getBoundingBox)
@@ -30,9 +31,14 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(fst,read_fst)
 importFrom(fst,write_fst)
+importFrom(kableExtra,column_spec)
+importFrom(kableExtra,footnote)
 importFrom(kableExtra,footnote_marker_symbol)
 importFrom(kableExtra,kable_styling)
 importFrom(knitr,kable)
+importFrom(leaflet.extras,addDrawToolbar)
+importFrom(leaflet.extras,editToolbarOptions)
+importFrom(leaflet.extras,selectedPathOptions)
 importFrom(lubridate,with_tz)
 importFrom(lubridate,ymd_h)
 importFrom(lubridate,ymd_hms)
