--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ nomads_download.html
 .httr-oauth
 token.rds
 .DS_Store
+inst/flowfinder/data/*
 inst/flowfinder/data/current_nc/*
 inst/flowfinder/data/current_nc_new/*
