--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_lgl)
 importFrom(reshape2,melt)
+importFrom(shinycssloaders,withSpinner)
 importFrom(shinyjs,click)
 importFrom(sp,SpatialPoints)
 importFrom(sp,over)
