--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,11 +12,10 @@ import(dygraphs)
 import(ggplot2)
 import(leaflet)
 import(shiny)
-importFrom(AOI,aoiProj)
-importFrom(AOI,describe)
+importFrom(AOI,aoi_describe)
+importFrom(AOI,aoi_get)
+importFrom(AOI,bbox_get)
 importFrom(AOI,geocode)
-importFrom(AOI,getAOI)
-importFrom(AOI,getBoundingBox)
 importFrom(HydroData,findNHD)
 importFrom(HydroData,findNWIS)
 importFrom(HydroData,findWaterbodies)
